--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ body, html {
 <div class="main-content" id="mainContent">
 
   <div class="header">
-    <h1>See your Suprise 🙈😘💋</h1>
+    <h1>See your Suprise<br>🙈😘💋</h1>
     <img src="kiss.gif" alt="Kiss GIF">
   </div>
 
